--- a/Spring Fundamentals/0.Lab-Mobilele/src/main/resources/templates/update.html
+++ b/Spring Fundamentals/0.Lab-Mobilele/src/main/resources/templates/update.html
@@ -18,27 +18,25 @@
 
 <div class="container">
     <h2 class="text-center text-white">Update Offer</h2>
-    <form method="POST"
+    <form  th:action="@{/offers/update/{id}(id=${id})}" th:method="patch" th:object="${addOfferBinding}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="row">
 
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="model">Model</label>
-                <select id="model" class="form-control">
-                    <option value="">- Select a model -</option>
-                    <optgroup label="Brand name">
-                        <option>Model</option>
-                    </optgroup>
+                <select id="model"  name="model" th:errorclass="is-invalid" class="form-control">
+                    <option th:each="m:${models}" th:value="${m}" th:text="${m}" th:selected="${m}==*{model}"> Select a model </option>
+
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Vechicle model is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="price" class="text-white font-weight-bold">Price</label>
-                <input id="price" type="number" min="0" step="100" class="form-control"
+                <input id="price" th:errorclass="is-invalid" th:field="*{price}" type="number" min="0" step="100" class="form-control"
                        placeholder="Suggested price"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Suggested price is required.
                 </p>
             </div>
@@ -46,24 +44,23 @@
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="engine">Engine</label>
-                <select id="engine" class="form-control">
+                <select id="engine" name="engine" th:errorclass="is-invalid" class="form-control">
                     <option value="">- Select engine type -</option>
-                    <option>
-                        Engine type
+                    <option th:each="e:${engines}" th:text="${e}" th:value="${e}" th:selected="${e}==*{engine}"> Engine type
                     </option>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Engine type is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="transmission">Transmission</label>
-                <select id="transmission" class="form-control">
+                <select th:errorclass="is-invalid" name="transmission" id="transmission" class="form-control">
                     <option value="">- Select transmission type -</option>
-                    <option> Transmission type
+                    <option th:each="t:${transmission}" th:text="${t}" th:value="${t}" th:selected="${t}==*{transmission}"> Transmission type
                     </option>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Transmission type is required.
                 </p>
             </div>
@@ -71,18 +68,18 @@
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label for="year" class="text-white font-weight-bold">Year</label>
-                <input id="year" type="number" min="1900" max="2099" step="1" class="form-control"
+                <input id="year" th:errorclass="is-invalid" th:field="*{year}" type="number" min="1900" max="2099" step="1" class="form-control"
                        placeholder="Manufacturing year"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Manufacturing year is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
-                <label for="mileage" class="text-white font-weight-bold">Mileage</label>
-                <input id="mileage" type="number" min="0" max="900000" step="1000"
+                <label for="mileage"  class="text-white font-weight-bold">Mileage</label>
+                <input id="mileage" type="number" min="0" max="900000" step="1000" th:errorclass="is-invalid" th:field="*{mileage}"
                        class="form-control"
                        placeholder="Mileage in kilometers"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Mileage in kilometers is required.
                 </p>
             </div>
@@ -90,17 +87,17 @@
 
         <div class="form-group">
             <label class="text-white font-weight-bold" for="description">Description</label>
-            <textarea id="description" type="textarea" class="form-control" rows="3"
+            <textarea id="description" th:errorclass="is-invalid" th:field="*{description}" type="textarea" class="form-control" rows="3"
                       placeholder="Description"></textarea>
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Description is required.
             </p>
         </div>
         <div class="form-group">
-            <label class="text-white font-weight-bold" for="imageUrl">Image URL</label>
-            <input id="imageUrl" type="url" class="form-control"
+            <label class="text-white font-weight-bold"   for="imageUrl">Image URL</label>
+            <input id="imageUrl" type="url" class="form-control" th:field="*{imageUrl}" th:errorclass="is-invalid"
                    placeholder="Put vehicle image URL here">
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Vehicle image URL is required.
             </p>
         </div>
@@ -108,7 +105,9 @@
         <div class="row">
             <div class="col col-md-4">
                 <div class="button-holder d-flex">
+
                     <input type="submit" class="btn btn-info btn-lg" value="Update Offer"/>
+
                 </div>
             </div>
         </div>
